--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         </div>
 
         <!-- LINKS SECTION -->
+        <!-- NEW IGCSE SECTION -->
+        <h3>International Students</h3>
+        <div class="btn-group">
+            <a href="igcse.html" class="btn" style="background-color: #f59e0b; color: white; border: 2px solid #f59e0b;">Cambridge IGCSE (0580)</a>
+        </div>
+        
         <h3>Complete Course Booklets</h3>
         <div class="btn-group">
             <a href="https://payhip.com/b/IVWzJ" class="btn btn-number">Number Booklet (£14.99)</a>
