--- a/igcse.html
+++ b/igcse.html
@@ -101,12 +101,15 @@
         </div>
 
         <h3>Try Before You Buy</h3>
-        <p style="margin-bottom: 20px; color: #ddd6fe;">Download the first topic from our booklets for free.</p>
+        <p style="margin-bottom: 20px; color: #ddd6fe;">Download a free worksheet from each of our five booklets.</p>
+        <p style="margin-bottom: 20px; color: #ddd6fe;">Discover the quality of Bradley's Maths before you buy.</p>
         <div class="btn-group">
             <!-- Ensure your filenames match these exactly on GitHub! -->
-            <a href="IGCSE_Number_Sample.pdf" class="btn btn-free">Number Sample (PDF)</a>
-            <a href="IGCSE_Algebra_Sample.pdf" class="btn btn-free">Algebra Sample (PDF)</a>
-            <a href="IGCSE_Geometry_Sample.pdf" class="btn btn-free">Geometry Sample (PDF)</a>
+            <a href="Sets_and_Venn_Diagrams.pdf" class="btn btn-free">IGCSE_Number_Sample</a>
+            <a href="Solving_Equations_Graphically.pdf" class="btn btn-free">IGCSE_Algebra_and_Graphs_Sample</a>
+            <a href="Angle-Properties.pdf" class="btn btn-free">IGCSE_Geometry_and_Measures_Sample</a>
+            <a href="Arcs_and_sectors.pdf" class="btn btn-free">IGCSE_Mensuration_and_Trigonomety_Sample</a>
+            <a href="Vector_Geometry.pdf" class="btn btn-free">IGCSE_Vectors, Probability_and_Statistics_Sample</a>
         </div>
         
         <div style="margin-top: 40px;">
