--- a/igcse.html
+++ b/igcse.html
@@ -105,11 +105,11 @@
         <p style="margin-bottom: 20px; color: #ddd6fe;">Discover the quality of Bradley's Maths before you buy.</p>
         <div class="btn-group">
             <!-- Ensure your filenames match these exactly on GitHub! -->
-            <a href="Sets_and_Venn_Diagrams.pdf" class="btn btn-free">IGCSE_Number_Sample</a>
-            <a href="Solving_Equations_Graphically.pdf" class="btn btn-free">IGCSE_Algebra_and_Graphs_Sample</a>
-            <a href="Angle-Properties.pdf" class="btn btn-free">IGCSE_Geometry_and_Measures_Sample</a>
-            <a href="Arcs_and_sectors.pdf" class="btn btn-free">IGCSE_Mensuration_and_Trigonomety_Sample</a>
-            <a href="Vector_Geometry.pdf" class="btn btn-free">IGCSE_Vectors, Probability_and_Statistics_Sample</a>
+            <a href="Sets_and_Venn_Diagrams.pdf" class="btn btn-free">IGCSE_Number</a>
+            <a href="Solving_Equations_Graphically.pdf" class="btn btn-free">IGCSE_Algebra_and_Graphs</a>
+            <a href="Angle_Properties.pdf" class="btn btn-free">IGCSE_Geometry_and_Measures</a>
+            <a href="Arcs_and_sectors.pdf" class="btn btn-free">IGCSE_Mensuration_and_Trigonomety</a>
+            <a href="Vector_Geometry.pdf" class="btn btn-free">IGCSE_Vectors, Probability_and_Statistics</a>
         </div>
         
         <div style="margin-top: 40px;">
