--- a/igcse.html
+++ b/igcse.html
@@ -106,10 +106,10 @@
         <div class="btn-group">
             <!-- Ensure your filenames match these exactly on GitHub! -->
             <a href="Sets_and_Venn_Diagrams.pdf" class="btn btn-free">Number</a>
-            <a href="Solving_Equations_Graphically.pdf" class="btn btn-free">Algebra_and_Graphs</a>
-            <a href="Angle_Properties.pdf" class="btn btn-free">Geometry_and_Measures</a>
-            <a href="Arcs_and_sectors.pdf" class="btn btn-free">Mensuration_and_Trigonomety</a>
-            <a href="Vector_Geometry.pdf" class="btn btn-free">Vectors, Probability_and_Statistics</a>
+            <a href="Solving_Equations_Graphically.pdf" class="btn btn-free">Algebra and Graphs</a>
+            <a href="Angle_Properties.pdf" class="btn btn-free">Geometry and Measures</a>
+            <a href="Arcs_and_sectors.pdf" class="btn btn-free">Mensuration and Trigonometry</a>
+            <a href="Vector_Geometry.pdf" class="btn btn-free">Vectors, Probability and Statistics</a>
         </div>
         
         <div style="margin-top: 40px;">
