--- a/igcse.html
+++ b/igcse.html
@@ -135,6 +135,15 @@
         }
         .widget-header { color: #4c1d95; font-weight: 800; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 15px; display: block; }
         .question-box { font-size: 1.3rem; margin-bottom: 25px; font-weight: 500; }
+        .question-img {
+            max-width: 100%;       
+            height: auto;          
+            display: block;        
+            margin-top: 15px;      
+            border: 1px solid #ddd;
+            border-radius: 8px;    
+        }
+        /* ------------------------- */
         
         .step-container { margin-top: 15px; border-top: 1px dashed #ccc; padding-top: 15px; }
         .step { font-size: 1.1rem; margin-bottom: 15px; display: none; }
