--- a/igcse.html
+++ b/igcse.html
@@ -183,10 +183,11 @@
             <div class="dropdown">
                 <button class="dropbtn">Free Worksheets ▾</button>
                 <div class="dropdown-content">
-                    <a href="1.1 Natural Numbers and Integers.pdf">1.1 Natural Numbers</a>
-                    <a href="1.2 Squares and Cubes.pdf">1.2 Squares & Cubes</a>
-                    <a href="1.3 Prime numbers, HCF, LCM.pdf">1.3 HCF & LCM</a>
-                    <a href="1.4 Rational and Irrational Numbers.pdf">1.4 Rational & Irrational</a>
+                    <a href="Sets_and_Venn_Diagrams.pdf">Number</a>
+                    <a href="Solving_Equations_Graphically.pdf">Algebra and Graphs</a>
+                    <a href="Angle_Properties.pdf">Geometry and Measures</a>
+                    <a href="Arcs_and_sectors.pdf">Mensuration and Trigonometry</a>
+                    <a href="Vector_Geometry.pdf">Vectors, Probability and Statistics</a>
                 </div>
             </div>
 
