--- a/igcse.html
+++ b/igcse.html
@@ -242,7 +242,7 @@
             <p style="font-size: 0.9rem; color: #a78bfa;">&copy; 2025 Bradley's Maths</p>
             <div class="btn-group">
                 <a href="index.html" class="btn btn-shop" style="font-size: 0.8rem; padding: 10px 20px;">Return to Home</a>
-                <a href="https://payhip.com/bradleysmaths" class="btn btn-shop" style="font-size: 0.8rem; padding: 10px 20px;">Store</a>
+                <a href="https://payhip.com/bradleysmaths/collection/cambridge-igcse-mathematics-syllabus-0580" class="btn btn-shop" style="font-size: 0.8rem; padding: 10px 20px;">IGCSE Store</a>
             </div>
         </div>
     </div>
