--- a/igcse.html
+++ b/igcse.html
@@ -173,8 +173,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Course Booklets ▾</button>
                 <div class="dropdown-content">
-                    <a href="https://payhip.com/b/IVWzJ">Number Booklet (£14.99)</a>
-                    <a href="https://payhip.com/b/wRN86">Algebra Booklet (£14.99)</a>
+                    <a href="https://payhip.com/b/krOXi">IGCSE - The Complete Collection</a>
                     <a href="https://payhip.com/bradleysmaths">Full Store</a>
                 </div>
             </div>
