--- a/igcse.html
+++ b/igcse.html
@@ -221,7 +221,7 @@
         </p>
 
         <div class="btn-group">
-            <a href="https://payhip.com/bradleysmaths" class="btn btn-primary">Browse the IGCSE Store</a>
+            <a href="https://payhip.com/b/krOXi" class="btn btn-primary">Browse the IGCSE Store</a>
         </div>
 
         <h3>Try Before You Buy</h3>
