--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         
         .btn-number { background-color: #10b981; color: white; border: 2px solid #10b981; }
         .btn-algebra { background-color: #3b82f6; color: white; border: 2px solid #3b82f6; }
+        .btn-algebra { background-color: #f59e0b; color: white; border: 2px solid #f59e0b; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
 
@@ -173,6 +174,7 @@
                 <div class="dropdown-content">
                     <a href="https://payhip.com/b/IVWzJ">Number Booklet (£14.99)</a>
                     <a href="https://payhip.com/b/wRN86">Algebra Booklet (£14.99)</a>
+                    <a href="https://payhip.com/b/XAGch">Geometry Booklet (£14.99)</a>
                     <a href="https://payhip.com/bradleysmaths">Full Store</a>
                 </div>
             </div>
@@ -216,6 +218,7 @@
         <div class="btn-group">
             <a href="https://payhip.com/b/IVWzJ" class="btn btn-number">Number Booklet (£14.99)</a>
             <a href="https://payhip.com/b/wRN86" class="btn btn-algebra">Algebra Booklet (£14.99)</a>
+             <a href="https://payhip.com/b/XAGch" class="btn btn-geometry">Geometry Booklet (£14.99)</a>
         </div>
         
         <!-- FOOTER LINKS -->
