--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+y<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
@@ -119,7 +119,7 @@
         
         .btn-number { background-color: #10b981; color: white; border: 2px solid #10b981; }
         .btn-algebra { background-color: #3b82f6; color: white; border: 2px solid #3b82f6; }
-        .btn-algebra { background-color: #f59e0b; color: white; border: 2px solid #f59e0b; }
+        .btn-geometry { background-color: #f59e0b; color: white; border: 2px solid #f59e0b; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
 
