--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ y<!DOCTYPE html>
         .btn { padding: 15px 25px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 50px; transition: transform 0.2s; display: inline-block; margin-bottom: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.2); }
         .btn:hover { transform: translateY(-3px); }
         
-        .btn-number { background-color: #10b981; color: white; border: 2px solid #10b981; }
-        .btn-algebra { background-color: #3b82f6; color: white; border: 2px solid #3b82f6; }
-        .btn-geometry { background-color: #f59e0b; color: white; border: 2px solid #f59e0b; }
+        .btn-number { background-color: #00e30b; color: white; border: 2px solid #00e30b; }
+        .btn-algebra { background-color: #0404e0; color: white; border: 2px solid #0404e0; }
+        .btn-geometry { background-color: #f4f719; color: white; border: 2px solid #f4f719; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
 
