--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ y<!DOCTYPE html>
         
         .btn-number { background-color: #00e30b; color: white; border: 2px solid #00e30b; }
         .btn-algebra { background-color: #0404e0; color: white; border: 2px solid #0404e0; }
-        .btn-geometry { background-color: #f4f719; color: white; border: 2px solid #f4f719; }
+        .btn-geometry { background-color: #dee019; color: white; border: 2px solid #dee019; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
 
