--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         .btn-number { background-color: #00e30b; color: white; border: 2px solid #00e30b; }
         .btn-algebra { background-color: #0404e0; color: white; border: 2px solid #0404e0; }
         .btn-geometry { background-color: #dee019; color: #575739; border: 2px solid #dee019; }
+        .button-prob-and-stats { background-color: cyan; color: white; border: 2px solid #0404e0; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
 
@@ -175,6 +176,7 @@
                     <a href="https://payhip.com/b/IVWzJ">Number Booklet (£14.99)</a>
                     <a href="https://payhip.com/b/wRN86">Algebra Booklet (£14.99)</a>
                     <a href="https://payhip.com/b/XAGch">Geometry Booklet (£14.99)</a>
+                    <a href="https://payhip.com/b/RVbqM">Probability and Statistics Booklet (£9.99)</a>
                     <a href="https://payhip.com/bradleysmaths">Full Store</a>
                 </div>
             </div>
@@ -218,7 +220,8 @@
         <div class="btn-group">
             <a href="https://payhip.com/b/IVWzJ" class="btn btn-number">Number Booklet (£14.99)</a>
             <a href="https://payhip.com/b/wRN86" class="btn btn-algebra">Algebra Booklet (£14.99)</a>
-             <a href="https://payhip.com/b/XAGch" class="btn btn-geometry">Geometry Booklet (£14.99)</a>
+            <a href="https://payhip.com/b/XAGch" class="btn btn-geometry">Geometry Booklet (£14.99)</a>
+            <a href="https://payhip.com/b/RVbqM" class="btn btn-prob-and-stats">Probability and Statistics Booklet (£9.99)</a>
         </div>
         
         <!-- FOOTER LINKS -->
