--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         .btn-number { background-color: #00e30b; color: white; border: 2px solid #00e30b; }
         .btn-algebra { background-color: #0404e0; color: white; border: 2px solid #0404e0; }
         .btn-geometry { background-color: #dee019; color: #575739; border: 2px solid #dee019; }
-        .button-prob-and-stats { background-color: cyan; color: white; border: 2px solid #0404e0; }
+        .button-prob-and-stats { background-color: #00FFFF; color: white; border: 2px solid #00FFFF; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
 
