--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         .btn { padding: 15px 25px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 50px; transition: transform 0.2s; display: inline-block; margin-bottom: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.2); }
         .btn:hover { transform: translateY(-3px); }
 
-        .btn-complete { background-color: #ffffff; color: #ffd700; border: 2px solid #ffd700; }
+        .btn-complete { background-color: #000000; color: #ffd700; border: 2px solid #ffd700; }
         .btn-number { background-color: #00e30b; color: white; border: 2px solid #00e30b; }
         .btn-algebra { background-color: #0404e0; color: white; border: 2px solid #0404e0; }
         .btn-geometry { background-color: #dee019; color: #575739; border: 2px solid #dee019; }
@@ -174,12 +174,12 @@
             <div class="dropdown">
                 <button class="dropbtn">Course Booklets ▾</button>
                 <div class="dropdown-content">
-                    <a href="https://payhip.com/b/l2JMG">The Complete Collection (£45)</a>
                     <a href="https://payhip.com/b/IVWzJ">Number Booklet (£14.99)</a>
                     <a href="https://payhip.com/b/wRN86">Algebra Booklet (£14.99)</a>
                     <a href="https://payhip.com/b/XAGch">Geometry Booklet (£14.99)</a>
                     <a href="https://payhip.com/b/RVbqM">Probability and Statistics Booklet (£9.99)</a>
                     <a href="https://payhip.com/bradleysmaths">Full Store</a>
+                    <a href="https://payhip.com/b/l2JMG">The Complete Collection (£45)</a>
                 </div>
             </div>
 
