--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
         .btn { padding: 15px 25px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 50px; transition: transform 0.2s; display: inline-block; margin-bottom: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.2); }
         .btn:hover { transform: translateY(-3px); }
 
-        .btn-complete { background-color: #000000; color: #ffd700; border: 2px solid #ffd700; }
+
         .btn-number { background-color: #00e30b; color: white; border: 2px solid #00e30b; }
         .btn-algebra { background-color: #0404e0; color: white; border: 2px solid #0404e0; }
         .btn-geometry { background-color: #dee019; color: #575739; border: 2px solid #dee019; }
         .btn-prob-and-stats { background-color: #00FFFF; color: #575739; border: 2px solid #00FFFF; }
         .btn-youtube { background-color: #cc0000; color: white; }
         .btn-shop { background-color: #ffffff; color: #4c1d95; }
+        .btn-complete { background-color: #000000; color: #ffd700; border: 2px solid #ffd700; }
 
         /* PROBLEM OF THE DAY WIDGET */
         .daily-widget {
@@ -225,6 +226,7 @@
             <a href="https://payhip.com/b/wRN86" class="btn btn-algebra">Algebra Booklet (£14.99)</a>
             <a href="https://payhip.com/b/XAGch" class="btn btn-geometry">Geometry Booklet (£14.99)</a>
             <a href="https://payhip.com/b/RVbqM" class="btn btn-prob-and-stats">Probability and Statistics Booklet (£9.99)</a>
+            <a href="https://payhip.com/b/l2JMG" class="btn btn-complete">The Complete Collection (£45)</a>
         </div>
         
         <!-- FOOTER LINKS -->
