--- a/igcse.html
+++ b/igcse.html
@@ -255,38 +255,170 @@
         }
 
         // --- DATA: 31 QUESTIONS (2025 SYLLABUS) ---
-        const problemBank = [
-            { q: "Simplify fully: $\\sqrt{50} + \\sqrt{32}$", steps: ["$\\sqrt{50} = \\sqrt{25 \\times 2} = 5\\sqrt{2}$", "$\\sqrt{32} = \\sqrt{16 \\times 2} = 4\\sqrt{2}$", "Add them: $5\\sqrt{2} + 4\\sqrt{2}$", "Final Answer: $$9\\sqrt{2}$$"] },
-            { q: "Expand and simplify: $(3 + \\sqrt{5})(3 - \\sqrt{5})$", steps: ["First: $3 \\times 3 = 9$", "Outer: $3 \\times -\\sqrt{5} = -3\\sqrt{5}$", "Inner: $\\sqrt{5} \\times 3 = +3\\sqrt{5}$", "Last: $\\sqrt{5} \\times -\\sqrt{5} = -5$", "Simplify: $9 - 5$", "Final Answer: $$4$$"] },
-            { q: "Rationalise the denominator: $\\frac{6}{\\sqrt{2}}$", steps: ["Multiply top and bottom by $\\sqrt{2}$", "$$\\frac{6\\sqrt{2}}{2}$$", "Simplify: $6 \\div 2 = 3$", "Final Answer: $$3\\sqrt{2}$$"] },
-            { q: "Write down the exact value of $\\tan 45^\\circ + \\sin 30^\\circ$", steps: ["Recall exact values: $\\tan 45^\\circ = 1$ and $\\sin 30^\\circ = 0.5$", "Add them: $1 + 0.5$", "Final Answer: $$1.5$$"] },
-            { q: "Show that $\\cos 60^\\circ \\times \\sin 30^\\circ = 0.25$", steps: ["$\\cos 60^\\circ = 0.5$", "$\\sin 30^\\circ = 0.5$", "Multiply: $0.5 \\times 0.5$", "Final Answer: $$0.25$$"] },
-            { q: "Evaluate $64^{2/3}$ without a calculator.", steps: ["The denominator (3) is the root: $\\sqrt[3]{64} = 4$", "The numerator (2) is the power: $4^2$", "Final Answer: $$16$$"] },
-            { q: "Simplify $(\\frac{27}{8})^{-1/3}$", steps: ["Negative power flips the fraction: $(\\frac{8}{27})^{1/3}$", "Cube root of top and bottom:", "$\\sqrt[3]{8} = 2$, $\\sqrt[3]{27} = 3$", "Final Answer: $$\\frac{2}{3}$$"] },
-            { q: "Calculate $(2 \\times 10^5) \\times (4 \\times 10^{-2})$ without a calculator.", steps: ["Multiply numbers: $2 \\times 4 = 8$", "Add powers: $5 + (-2) = 3$", "Final Answer: $$8 \\times 10^3$$"] },
-            { q: "Calculate $3\\frac{1}{4} - 1\\frac{5}{6}$ (show working).", steps: ["Convert to improper fractions: $\\frac{13}{4} - \\frac{11}{6}$", "Common denominator (12): $\\frac{39}{12} - \\frac{22}{12}$", "Subtract: $\\frac{17}{12}$", "Final Answer: $$1\\frac{5}{12}$$"] },
-            { q: "Convert $0.4\\dot{5}$ to a fraction in simplest form.", steps: ["$x = 0.4555...$", "$10x = 4.555...$", "$100x = 45.555...$", "Subtract: $90x = 41$", "Final Answer: $$\\frac{41}{90}$$"] },
-            { q: "Solve $x^2 + 4x - 7 = 0$. Give answer in the form $a \\pm \\sqrt{b}$.", steps: ["Quadratic Formula or Complete Square.", "$(x+2)^2 - 4 - 7 = 0$", "$(x+2)^2 = 11$", "$x+2 = \\pm\\sqrt{11}$", "Final Answer: $$-2 \\pm \\sqrt{11}$$"] },
-            { q: "Factorise $6x^2 - 13x - 5$.", steps: ["Find two numbers that multiply to $6 \\times -5 = -30$ and add to $-13$. (-15 and 2)", "Split middle term: $6x^2 - 15x + 2x - 5$", "Factorise pairs: $3x(2x-5) + 1(2x-5)$", "Final Answer: $$(2x-5)(3x+1)$$"] },
-            { q: "Make $x$ the subject: $y = \\frac{x+3}{x-2}$", steps: ["Multiply by $(x-2)$: $y(x-2) = x+3$", "Expand: $xy - 2y = x + 3$", "Collect x terms: $xy - x = 2y + 3$", "Factorise x: $x(y-1) = 2y + 3$", "Final Answer: $$x = \\frac{2y+3}{y-1}$$"] },
-            { q: "$f(x) = 2x - 3$. Find $f^{-1}(x)$.", steps: ["Let $y = 2x - 3$", "Swap x and y: $x = 2y - 3$", "Rearrange for y: $x + 3 = 2y$", "Final Answer: $$f^{-1}(x) = \\frac{x+3}{2}$$"] },
-            { q: "Find the range of $f(x) = x^2 + 3$ for the domain $x \\ge 0$.", steps: ["When $x=0$, $y=3$.", "As $x$ increases, $x^2 + 3$ increases.", "The graph starts at 3 and goes up.", "Final Answer: $$y \\ge 3$$"] },
-            { q: "Solve $10 - 3x < 4$.", steps: ["Subtract 10: $-3x < -6$", "Divide by -3 (Flip the sign!): $x > 2$", "Final Answer: $$x > 2$$"] },
-            { q: "Solve simultaneous equations: $3x+y=11$ and $2x-3y=11$.", steps: ["Multiply eq(1) by 3: $9x + 3y = 33$", "Add to eq(2): $11x = 44 \\rightarrow x=4$", "Sub into eq(1): $3(4) + y = 11 \\rightarrow 12 + y = 11$", "Final Answer: $$x=4, y=-1$$"] },
-            { q: "Find the $n$th term of: $3, 9, 19, 33, \\dots$", steps: ["1st Diff: 6, 10, 14. 2nd Diff: 4. So it is $2n^2$.", "Subtract $2n^2$ (2, 8, 18, 32) from sequence: 1, 1, 1, 1.", "The remainder is just +1.", "Final Answer: $$2n^2 + 1$$"] },
-            { q: "$y$ is inversely proportional to $x^2$. When $x=3, y=4$. Find $y$ when $x=2$.", steps: ["$y = k/x^2$", "$4 = k/9 \\rightarrow k=36$", "Formula: $y = 36/x^2$", "When $x=2$: $y = 36/4$", "Final Answer: $$y=9$$"] },
-            { q: "$\\vec{AB} = \\begin{pmatrix} 3 \\\\ -2 \\end{pmatrix}$. Calculate $|\\vec{AB}|$.", steps: ["Magnitude is Pythagoras: $\\sqrt{x^2 + y^2}$", "$\\sqrt{3^2 + (-2)^2} = \\sqrt{9+4}$", "Final Answer: $$\\sqrt{13}$$"] },
-            { q: "Points $A,B,C,D$ on circle. Angle $ABD=40^\\circ$. Find Angle $ACD$.", steps: ["Angles subtended by the same arc (AD) are equal.", "Angles in the same segment are equal.", "Final Answer: $$40^\\circ$$"] },
-            { q: "Cone: $r=5, l=13$. Calculate Volume.", steps: ["Find height $h = \\sqrt{13^2 - 5^2} = 12$", "Vol = $\\frac{1}{3}\\pi r^2 h$", "$\\frac{1}{3} \\times \\pi \\times 25 \\times 12 = 100\\pi$", "Final Answer: $$314.2 \\text{ cm}^3$$"] },
-            { q: "Triangle $ABC$: $c=8, b=7, B=50^\\circ$. Find Angle $C$.", steps: ["Sine Rule: $\\frac{\\sin C}{8} = \\frac{\\sin 50}{7}$", "$\\sin C = \\frac{8 \\sin 50}{7} = 0.875...$", "$C = \\sin^{-1}(0.875...)$", "Final Answer: $$61.1^\\circ$$"] },
-            { q: "Largest angle in triangle with sides 5, 7, 10.", steps: ["Largest angle is opposite longest side (10).", "Cosine Rule: $\\cos A = \\frac{5^2 + 7^2 - 10^2}{2 \\times 5 \\times 7}$", "$\\cos A = \\frac{25 + 49 - 100}{70} = \\frac{-26}{70}$", "Final Answer: $$111.8^\\circ$$"] },
-            { q: "Bag: 5 Red, 3 Blue. Pick 2 without replacement. P(Same Colour).", steps: ["RR: $\\frac{5}{8} \\times \\frac{4}{7} = \\frac{20}{56}$", "BB: $\\frac{3}{8} \\times \\frac{2}{7} = \\frac{6}{56}$", "Total: $\\frac{26}{56}$", "Final Answer: $$\\frac{13}{28}$$"] },
-            { q: "Invest $5000 at 2.4\\% for 5 years.", steps: ["Multiplier: $1.024$", "$5000 \\times 1.024^5$", "Final Answer: $$5629.50$$"] },
-            { q: "Turning point of $y = x^2 - 6x + 5$ using differentiation.", steps: ["$dy/dx = 2x - 6$", "Set to 0: $2x = 6 \\rightarrow x = 3$", "Find y: $3^2 - 6(3) + 5 = 9 - 18 + 5 = -4$", "Final Answer: $$(3, -4)$$"] },
-            { q: "Similar bottles. Vols 500, 1080. Small h=15. Find large H.", steps: ["Vol Ratio: $1080/500 = 2.16$", "Length Scale Factor = $\\sqrt[3]{2.16} = 1.2$", "$H = 15 \\times 1.2$", "Final Answer: $$18 \\text{ cm}$$"] },
-            { q: "Histogram: Class width 20, Freq 15. Find Freq Density.", steps: ["FD = Frequency $\\div$ Width", "$15 \\div 20$", "Final Answer: $$0.75$$"] },
-            { q: "$L=12.5$ (1dp), $W=8.4$ (1dp). Upper Bound of Area.", steps: ["Upper Bounds: $L=12.55, W=8.45$", "Area = $12.55 \\times 8.45$", "Final Answer: $$106.0475$$"] },
-            { q: "$\\vec{OA}=\\mathbf{a}, \\vec{OB}=\\mathbf{b}$. M is midpoint of AB. Find $\\vec{OM}$.", steps: ["$\\vec{OM} = \\vec{OA} + \\frac{1}{2}\\vec{AB}$", "$\\vec{AB} = \\mathbf{b} - \\mathbf{a}$", "$\\mathbf{a} + \\frac{1}{2}(\\mathbf{b} - \\mathbf{a}) = \\mathbf{a} + 0.5\\mathbf{b} - 0.5\\mathbf{a}$", "Final Answer: $$\\frac{1}{2}(\\mathbf{a} + \\mathbf{b})$$"] }
+       const problemBank = [
+            // JAN 1
+            {
+                q: "Happy New Year! Simplify fully: $(16x^8)^{\\frac{1}{4}}$",
+                steps: ["Fourth root of 16 is 2.", "Power of x: $8 \\times 0.25 = 2$.", "Final Answer: $$2x^2$$"]
+            },
+            // JAN 2 - BILL'S GRADE 9 GEOMETRY SPECIAL
+            {
+                q: "ABCD is a cyclic quadrilateral. O (centre) lies on AD. Angle BOD is $72^\\circ$. BC=CD. Find angle ABC.",
+                img: "images/cyclic_quad_jan.png", 
+                steps: [
+                    "Step 1: AD is diameter, so $\\angle ABD = 90^\\circ$.",
+                    "Step 2: Triangle OBD is isosceles (radii). $\\angle OBD = (180-72)/2 = 54^\\circ$.",
+                    "Step 3: Equal chords BC=CD means equal angles at centre. $\\angle BOC = 36^\\circ$ and $\\angle COD = 36^\\circ$.",
+                    "Step 4: Angle at centre (COD=$36^\\circ$) is twice angle at circumference (CBD). So $\\angle CBD = 18^\\circ$.",
+                    "Step 5: Total Angle ABC = $90^\\circ + 18^\\circ$.",
+                    "Final Answer: $$108^\\circ$$"
+                ]
+            },
+            // JAN 3
+            {
+                q: "Differentiation: Find the coordinates of the turning point of $y = x^2 - 8x + 5$.",
+                steps: ["Differentiate: $\\frac{dy}{dx} = 2x - 8$.", "Set to 0 for stationary point: $2x - 8 = 0 \\rightarrow x = 4$.", "Substitute $x=4$ into $y$: $16 - 32 + 5$.", "Final Answer: $$(4, -11)$$"]
+            },
+            // JAN 4
+            {
+                q: "Sets: $n(\\xi) = 20, n(A) = 12, n(B) = 10, n(A \\cup B) = 18$. Find $n(A \\cap B)$.",
+                steps: ["Formula: $n(A \\cup B) = n(A) + n(B) - n(A \\cap B)$.", "$18 = 12 + 10 - x$.", "$18 = 22 - x$.", "Final Answer: $$4$$"]
+            },
+            // JAN 5 - REPLACED MATRICES WITH SURDS (New Non-Calc Topic)
+            {
+                q: "Surds: Rationalise the denominator of $\\frac{10}{\\sqrt{2}}$.",
+                steps: ["Multiply top and bottom by $\\sqrt{2}$.", "$\\frac{10\\sqrt{2}}{2}$.", "Simplify $10 \\div 2$.", "Final Answer: $$5\\sqrt{2}$$"]
+            },
+            // JAN 6
+            {
+                q: "Functions: $f(x) = 2x - 5$. Find $f^{-1}(x)$.",
+                steps: ["Let $y = 2x - 5$.", "Swap variables: $x = 2y - 5$.", "Rearrange: $x + 5 = 2y$.", "Final Answer: $$\\frac{x+5}{2}$$"]
+            },
+            // JAN 7
+            {
+                q: "Vectors: $\\vec{OP} = 2\\mathbf{a}$, $\\vec{OQ} = 3\\mathbf{b}$. M is midpoint of PQ. Find $\\vec{OM}$.",
+                steps: ["$\\vec{PQ} = -2\\mathbf{a} + 3\\mathbf{b}$.", "$\\vec{PM} = 0.5(-2\\mathbf{a} + 3\\mathbf{b}) = -\\mathbf{a} + 1.5\\mathbf{b}$.", "$\\vec{OM} = \\vec{OP} + \\vec{PM} = 2\\mathbf{a} - \\mathbf{a} + 1.5\\mathbf{b}$.", "Final Answer: $$\\mathbf{a} + 1.5\\mathbf{b}$$"]
+            },
+            // JAN 8
+            {
+                q: "Mensuration: Sector Angle $60^\\circ$, Radius 6cm. Find Area.",
+                steps: ["Formula: $\\frac{\\theta}{360} \\pi r^2$.", "$\\frac{60}{360} \\pi (36)$.", "$\\frac{1}{6} \\times 36\\pi$.", "Final Answer: $$6\\pi$$"]
+            },
+            // JAN 9 - REPLACED LINEAR PROGRAMMING WITH EXACT TRIG (New Topic)
+            {
+                q: "Exact Trig: Calculate the exact value of $\\sin(30^\\circ) \\times \\cos(45^\\circ)$.",
+                steps: ["$\\sin(30) = 0.5$.", "$\\cos(45) = \\frac{\\sqrt{2}}{2}$.", "Multiply: $\\frac{1}{2} \\times \\frac{\\sqrt{2}}{2}$.", "Final Answer: $$\\frac{\\sqrt{2}}{4}$$"]
+            },
+            // JAN 10
+            {
+                q: "Sequences: Find nth term of $5, 8, 11, 14...$",
+                steps: ["Difference is +3 ($3n$).", "0th term is $5 - 3 = 2$.", "Final Answer: $$3n + 2$$"]
+            },
+            // JAN 11
+            {
+                q: "Bounds: $L = 10$ (nearest integer). $W = 5$ (nearest integer). Max Area?",
+                steps: ["Max L = 10.5. Max W = 5.5.", "Area = $10.5 \\times 5.5$.", "Final Answer: $$57.75$$"]
+            },
+            // JAN 12
+            {
+                q: "Differentiation: Find gradient of $y = x^3$ at $x=2$.",
+                steps: ["Differentiate: $3x^2$.", "Substitute $x=2$.", "$3(2^2) = 3(4)$.", "Final Answer: $$12$$"]
+            },
+            // JAN 13
+            {
+                q: "Algebra: Solve $\\frac{2}{x} + \\frac{3}{x+1} = 1$.",
+                steps: ["Common denom: $2(x+1) + 3x = x(x+1)$.", "$2x + 2 + 3x = x^2 + x$.", "$5x + 2 = x^2 + x$.", "$x^2 - 4x - 2 = 0$.", "Use Quad Formula.", "Final Answer: $$x=4.45, x=-0.45$$"]
+            },
+            // JAN 14 - REPLACED MATRIX TRANSFORMATION WITH DOMAIN (New Emphasis)
+            {
+                q: "Functions: Find the value of $x$ that must be excluded from the domain of $f(x) = \\frac{1}{x-3}$.",
+                steps: ["The denominator cannot be zero.", "$x - 3 = 0$.", "$x = 3$.", "Final Answer: $$x \\neq 3$$"]
+            },
+            // JAN 15
+            {
+                q: "Statistics: Mean of 5 numbers is 12. Add a 6th number (18). New Mean?",
+                steps: ["Total of 5: $5 \\times 12 = 60$.", "New Total: $60 + 18 = 78$.", "Count: 6.", "Mean: $78 \\div 6$.", "Final Answer: $$13$$"]
+            },
+            // JAN 16
+            {
+                q: "Circle Theorems: Tangent meets Radius. Angle?",
+                steps: ["Fundamental Theorem.", "Angle between tangent and radius is always 90.", "Final Answer: $$90^\\circ$$"]
+            },
+            // JAN 17
+            {
+                q: "Compound Interest: $500 at 10% for 2 years.",
+                steps: ["Multiplier 1.1.", "$500 \\times 1.1^2$.", "$500 \\times 1.21$.", "Final Answer: $$605$$"]
+            },
+            // JAN 18
+            {
+                q: "Variation: $y$ inversely proportional to $x$. $x=2, y=10$. Formula?",
+                steps: ["$y = k/x$.", "$10 = k/2 \\rightarrow k=20$.", "Final Answer: $$y = \\frac{20}{x}$$"]
+            },
+            // JAN 19
+            {
+                q: "Polygons: Sum of interior angles of a pentagon.",
+                steps: ["Formula: $(n-2) \\times 180$.", "$(5-2) \\times 180$.", "$3 \\times 180$.", "Final Answer: $$540^\\circ$$"]
+            },
+            // JAN 20
+            {
+                q: "Indices: Simplify $(2x^{-2})^{-3}$.",
+                steps: ["Number: $2^{-3} = 1/8$.", "Power: $x^{-2 \\times -3} = x^6$.", "Final Answer: $$\\frac{x^6}{8}$$"]
+            },
+            // JAN 21
+            {
+                q: "Trig: Solve $\\sin x = 0.5$ for $0 \\le x \\le 360$.",
+                steps: ["Principal value: $30^\\circ$.", "Sine positive in 2nd quadrant: $180 - 30$.", "Final Answer: $$30^\\circ, 150^\\circ$$"]
+            },
+            // JAN 22
+            {
+                q: "Probability: P(A)=0.4, P(B)=0.5. Independent. P(A and B)?",
+                steps: ["Independent means multiply.", "$0.4 \\times 0.5$.", "Final Answer: $$0.2$$"]
+            },
+            // JAN 23
+            {
+                q: "Coordinate Geometry: Midpoint of $(2,4)$ and $(8,10)$.",
+                steps: ["Average x: $(2+8)/2 = 5$.", "Average y: $(4+10)/2 = 7$.", "Final Answer: $$(5, 7)$$"]
+            },
+            // JAN 24
+            {
+                q: "Limits: $x$ is 5.4 correct to 2 sig figs. Upper Bound?",
+                steps: ["Place value is 0.1.", "Half is 0.05.", "Final Answer: $$5.45$$"]
+            },
+            // JAN 25
+            {
+                q: "Speed: 20km in 30 mins. Find speed in km/h.",
+                steps: ["30 mins = 0.5 hours.", "Speed = Dist / Time.", "$20 / 0.5$.", "Final Answer: $$40 \\text{ km/h}$$"]
+            },
+            // JAN 26
+            {
+                q: "Factorise: $x^2 - 6x + 9$.",
+                steps: ["Factors of 9 that add to -6.", "-3 and -3.", "Final Answer: $$(x-3)^2$$"]
+            },
+            // JAN 27
+            {
+                q: "Vectors: $\\vec{a} = \\begin{pmatrix} 1 \\\\ 2 \\end{pmatrix}, \\vec{b} = \\begin{pmatrix} -1 \\\\ 5 \\end{pmatrix}$. Find $2\\vec{a} + \\vec{b}$.",
+                steps: ["$2\\vec{a} = \\begin{pmatrix} 2 \\\\ 4 \\end{pmatrix}$.", "Add x: $2 + -1 = 1$.", "Add y: $4 + 5 = 9$.", "Final Answer: $$\\begin{pmatrix} 1 \\\\ 9 \\end{pmatrix}$$"]
+            },
+            // JAN 28
+            {
+                q: "Simultaneous Eq: $y=3x$ and $x+y=20$.",
+                steps: ["Substitute: $x + 3x = 20$.", "$4x = 20 \\rightarrow x=5$.", "$y = 3(5) = 15$.", "Final Answer: $$x=5, y=15$$"]
+            },
+            // JAN 29
+            {
+                q: "Standard Form: $2.4 \\times 10^3 + 3.1 \\times 10^2$.",
+                steps: ["Convert to ordinary: $2400 + 310$.", "Add: $2710$.", "Convert back.", "Final Answer: $$2.71 \\times 10^3$$"]
+            },
+            // JAN 30
+            {
+                q: "Volume of Sphere: Radius 3cm.",
+                steps: ["Formula: $\\frac{4}{3}\\pi r^3$.", "$\\frac{4}{3}\\pi (27)$.", "$4 \\times 9\\pi$.", "Final Answer: $$36\\pi$$"]
+            },
+            // JAN 31
+            {
+                q: "Algebraic Proof: Show sum of 3 consecutive integers is multiple of 3.",
+                steps: ["Terms: $n, n+1, n+2$.", "Sum: $3n + 3$.", "Factorise: $3(n+1)$.", "Conclusion: Multiple of 3."]
+            }
         ];
 
         // --- ENGINE: DATE & DISPLAY ---
