--- a/igcse.html
+++ b/igcse.html
@@ -411,12 +411,12 @@
             },
             // JAN 30
             {
-                q: "Volume of Sphere: Radius 3cm.",
+                q: "Find the volume of a sphere with radius 3cm.",
                 steps: ["Formula: $\\frac{4}{3}\\pi r^3$.", "$\\frac{4}{3}\\pi (27)$.", "$4 \\times 9\\pi$.", "Final Answer: $$36\\pi$$"]
             },
             // JAN 31
             {
-                q: "Algebraic Proof: Show sum of 3 consecutive integers is multiple of 3.",
+                q: "Algebraic Proof: Show that the sum of 3 consecutive integers is a multiple of 3.",
                 steps: ["Terms: $n, n+1, n+2$.", "Sum: $3n + 3$.", "Factorise: $3(n+1)$.", "Conclusion: Multiple of 3."]
             }
         ];
