--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             },
             // JAN 2
             {
-                q: "Ratio: Ali and Beth share money in ratio 3:5. Beth gets £40 more than Ali. Total money?",
+                q: "Ratio: Ali and Beth share a sum of money in the ratio 3:5. Beth gets £40 more than Ali. Find the total amount of money?",
                 steps: ["Difference in parts: $5 - 3 = 2$ parts.", "2 parts = £40. So 1 part = £20.", "Total parts = $3 + 5 = 8$.", "Total Money = $8 \\times 20$.", "Final Answer: $$£160$$"]
             },
             // JAN 3
