--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         .btn-exam-a { background-color: #ffffff; color: #4c1d95; border: 2px solid #4c1d95; }
         .btn-exam-b { background-color: #e9d5ff; color: #4c1d95; border: 2px solid #4c1d95; }
         .btn-exam-c { background-color: #4c1d95; color: #ffffff; border: 2px solid #ffffff; }
-        .btn-exam-bundle { background-color: #ffd700; color: #000000; border: 2px solid #ffffff; font-size: 1.1rem; }
+        .btn-exam-bundle { background-color: #ffd700; color: #ffffff; border: 2px solid #ffffff; font-size: 1.1rem; }
 
         /* WIDGET STYLES */
         .daily-widget {
