--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         .btn-exam-a { background-color: #ffffff; color: #4c1d95; border: 2px solid #4c1d95; }
         .btn-exam-b { background-color: #e9d5ff; color: #4c1d95; border: 2px solid #4c1d95; }
         .btn-exam-c { background-color: #4c1d95; color: #ffffff; border: 2px solid #ffffff; }
-        .btn-exam-bundle { background-color: #ffd700; color: #ffffff; border: 2px solid #ffffff; font-size: 1.1rem; }
+        .btn-exam-bundle { background-color: #ffd700; color: #000000; border: 2px solid #000000; font-size: 1.1rem; }
 
         /* WIDGET STYLES */
         .daily-widget {
@@ -157,10 +157,10 @@
             <div class="dropdown">
                 <button class="dropbtn gold-link">AQA 2026 Exams ▾</button>
                 <div class="dropdown-content">
-                    <a href="YOUR_PAYHIP_LINK_HERE">Set A (Core Skills)</a>
-                    <a href="YOUR_PAYHIP_LINK_HERE">Set B (Applied)</a>
-                    <a href="YOUR_PAYHIP_LINK_HERE">Set C (Grade 9)</a>
-                    <a href="YOUR_PAYHIP_LINK_HERE" style="font-weight: bold; color: #d97706;">★ Full 9-Paper Bundle</a>
+                    <a href="YOUR_PAYHIP_LINK_HERE">Set A (£7.50)</a>
+                    <a href="YOUR_PAYHIP_LINK_HERE">Set B (£7.50)</a>
+                    <a href="YOUR_PAYHIP_LINK_HERE">Set C (£7.50)</a>
+                    <a href="YOUR_PAYHIP_LINK_HERE" style="font-weight: bold; color: #d97706;">★ Full 9-Paper Bundle - £15</a>
                 </div>
             </div>
 
