--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             <div class="dropdown">
                 <button class="dropbtn gold-link">AQA 2026 Exams ▾</button>
                 <div class="dropdown-content">
-                    <a href="YOUR_PAYHIP_LINK_HERE">Set A (£7.50)</a>
-                    <a href="YOUR_PAYHIP_LINK_HERE">Set B (£7.50)</a>
-                    <a href="YOUR_PAYHIP_LINK_HERE">Set C (£7.50)</a>
-                    <a href="YOUR_PAYHIP_LINK_HERE" style="font-weight: bold; color: #d97706;">★ Full 9-Paper Bundle - £15</a>
+                    <a href="https://payhip.com/b/x0OrH">Set A (£7.50)</a>
+                    <a href="https://payhip.com/b/CdRz2">Set B (£7.50)</a>
+                    <a href="https://payhip.com/b/3ZTrU">Set C (£7.50)</a>
+                    <a href="https://payhip.com/b/9cP7i" style="font-weight: bold; color: #d97706;">★ Full 9-Paper Bundle - £15</a>
                 </div>
             </div>
 
@@ -211,13 +211,13 @@
         
         <div class="btn-group">
             <!-- REPLACE '#' WITH YOUR PAYHIP LINKS BELOW -->
-            <a href="#" class="btn btn-exam-a">Set A (Core)</a>
-            <a href="#" class="btn btn-exam-b">Set B (Applied)</a>
-            <a href="#" class="btn btn-exam-c">Set C (Grade 9)</a>
+            <a href="https://payhip.com/b/x0OrH" class="btn btn-exam-a">Set A (£7.50)</a>
+            <a href="https://payhip.com/b/CdRz2" class="btn btn-exam-b">Set B (£7.50)</a>
+            <a href="https://payhip.com/b/3ZTrU" class="btn btn-exam-c">Set C (7.50)</a>
         </div>
         <div style="margin-top: 10px;">
-            <a href="#" class="btn btn-exam-bundle" style="width: 90%; max-width: 500px;">
-                ★ DOWNLOAD THE COMPLETE BUNDLE ★
+            <a href="https://payhip.com/b/9cP7i" class="btn btn-exam-bundle" style="width: 90%; max-width: 500px;">
+                ★ DOWNLOAD THE COMPLETE BUNDLE - £15 ★
             </a>
         </div>
 
