--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
             <div class="dropdown">
                 <button class="dropbtn">Free Worksheets ▾</button>
                 <div class="dropdown-content">
-                    <a href="1.1 Natural Numbers and Integers.pdf">1.1 Natural Numbers</a>
-                    <a href="1.2 Squares and Cubes.pdf">1.2 Squares & Cubes</a>
-                    <a href="1.3 Prime numbers, HCF, LCM.pdf">1.3 HCF & LCM</a>
-                    <a href="1.4 Rational and Irrational Numbers.pdf">1.4 Rational & Irrational</a>
+                    <a href="Number - direct proportion.pdf">Number (Proportion)</a>
+                    <a href="Algebra - rational expressions.pdf">Algebra (Rational Exp)</a>
+                    <a href="Geometry - circle theorem proofs.pdf">Geometry (Proofs)</a>
+                    <a href="Probability - frequency trees.pdf">Prob (Freq Trees)</a>
                 </div>
             </div>
         </div>
